--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-  "id": "obsidian-filename-heading-sync",
-  "name": "Filename Heading Sync",
-  "version": "1.9.0",
+  "id": "obsidian-slugify-heading-filename",
+  "name": "Slugify Heading as Filename",
+  "version": "1.0.0",
   "minAppVersion": "0.11.0",
-  "description": "Obsidian plugin for keeping the filename with the first heading of a file in sync",
-  "author": "dvcrn",
-  "authorUrl": "https://github.com/dvcrn/obsidian-filename-heading-sync",
+  "description": "Obsidian plugin to keep the filename of a note synchronised with the slugified version of the first h1",
+  "author": "solace",
+  "authorUrl": "https://github.com/solace/obsidian-slugify-heading-filename",
   "isDesktopOnly": false
 }
